Basic application fro Android
Basic application fro Android

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">RunForLife</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello World</string>
+    <string name="Distance">Distance</string>
+    <string name="distance_val">Enter the distance</string>
+    <string name="run_btn">Run</string>
+
 </resources>
