--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,14 @@
     <string name="Distance">Distance</string>
     <string name="distance_val">Enter the distance</string>
     <string name="run_btn">Run</string>
-    <string name="label_button_gohome">Go Home</string>
+    <string name="label_button_miles">Miles</string>
+    <string name="label_button_km">Kms</string>
+    <string name="label_button_m">m</string>
     <string name="label_button_getdirections">Get Directions</string>
-    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:\nStart: Nokia, Burnaby\nEnd:Airport, YVR</string>
-
+    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:</string>
+    <string-array name="distance_array">
+        <item>miles</item>
+        <item>kms</item>
+        <item>m</item>
+    </string-array>
 </resources>
